--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -1,39 +1,52 @@
-<h1 class="requests__title">Requests</h1>
 
-<div class="requests">
-  <table class="requests__table">
-    <thead>
-      <tr>
-        <th>Member ID</th>
-        <th>Member Name</th>
-        <th>Book ID</th>
-        <th>Book Name</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let request of requests">
-        <td>{{ request.memberId }}</td>
-        <td>{{ request.memberName }}</td>
-        <td>{{ request.bookId }}</td>
-        <td>{{ request.bookName }}</td>
-        <td class="requests__cell--center">
-          <span *ngIf="request.status === 'pending'">
-            <button class="requests__accept-btn" (click)="acceptRequest(request.transactionId)">Accept</button>
-            <button class="requests__reject-btn" (click)="rejectRequest(request.transactionId)">Reject</button>
-          </span>
-          <span *ngIf="request.status === 'accepted'" [ngClass]="'requests__accepted'">
-            Accepted
-          </span>
-          <span *ngIf="request.status === 'rejected'" [ngClass]="'requests__rejected'">
-            Rejected
-          </span>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <h2 class="requests-transactions__title">Requests Transactions</h2>
+  <div class="requests-transactions">
+  <div class="requests-transactions__list">
+    <table class="requests-transactions__table">
+      <thead>
+        <tr>
+          <th>Transaction ID</th>
+          <th>Member ID</th>
+          <th>Member Name</th>
+          <th>Book ID</th>
+          <th>Book Title</th>
+          <th>Status</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let request of requests">
+          <td>{{request.requestId}}</td>
+          <td>{{ request.memberId }}</td>
+          <td>{{ request.memberName }}</td>
+          <td>{{ request.bookId }}</td>
+          <td>{{ request.bookName }}</td>
+          <td>{{ request.status }}</td>
+          <td>
+            <ng-container *ngIf="request.status === 'PENDING' || request.status === 'RETURN_PENDING'; else finalStatus">
+              <button
+  class="requests-transactions__btn accept"
+  (click)="acceptRequest(request.requestId,request.memberId,request.bookId)">
+  Accept
+</button>
+<button
+class="requests-transactions__btn reject"
+(click)="rejectRequest(request.requestId,request.memberId,request.bookId)">
+Reject
+</button>
+            </ng-container>
 
-  <div *ngIf="requests.length === 0" class="requests__empty">
-    No requests available.
+            <ng-template #finalStatus>
+              <span *ngIf="request.status === 'BORROWED' || request.status === 'RETURNED'" style="color: green;font-weight: bold;">
+                Accepted
+              </span>
+              <span *ngIf="request.status === 'BORROW_REJECTED' || request.status === 'RETURN_REJECTED'" style="color: red;font-weight: bold;">
+                Rejected
+              </span>
+            </ng-template>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
